@@ -36,11 +36,14 @@ from karl.adapters.interfaces import IMailinDispatcher
 from karl.adapters.interfaces import IMailinHandler
 from karl.utils import find_catalog
 from karl.utils import find_communities
+from karl.utils import get_setting
 from karl.utils import hex_to_docid
 from repoze.bfg.traversal import find_model
 from repoze.mailin.maildir import MaildirStore
 from repoze.mailin.pending import PendingQueue
 from repoze.postoffice.queue import open_queue
+from repoze.sendmail.interfaces import IMailDelivery
+from zope.component import getUtility
 
 #BLOG_ENTRY_REGX = re.compile(r'objectuid([a-zA-Z0-9]{32})\@')
 REPLY_REGX = re.compile(r'(?P<community>\w+)\+(?P<tool>\w+)-(?P<reply>\w+)@')
@@ -208,7 +211,7 @@ class MailinRunner2(object):
         self.queue = queue_factory(zodb_uri, queue_name, zodb_path)
         dispatcher = IMailinDispatcher(self.root)
         dispatcher.default_tool = 'blog'
-        dispatcher.text_scrubber = text_scrubber
+        dispatcher.text_scrubber = 'karl.utilities.mailin.text_scrubber'
         self.dispatcher = dispatcher
 
     def __call__(self):
@@ -232,9 +235,9 @@ class MailinRunner2(object):
             info = self.dispatcher.crackHeaders(message)
             error = info.get('error')
             if error:
-                self.queue.bounce(message, error)
+                self.bounce_message(message, error)
                 log.info('Bounced %s %s %s' % (
-                    message_id, 'error', repr(info)))
+                    message_id, error, repr(info)))
                 return False
             else:
                 text, attachments = self.dispatcher.crackPayload(message)
@@ -242,12 +245,11 @@ class MailinRunner2(object):
                 extra = ['%s:%s' % (x, info.get(x))
                             for x in ('community', 'in_reply_to', 'tool',
                                       'author') if info.get(x) is not None]
-                log.info('Processed', message_id, ','.join(extra))
+                log.info('Processed %s %s', message_id, ','.join(extra))
                 return True
         except:
-            self.queue.quarantine(message, sys.exc_info())
-            error_msg = traceback.format_exc()
-            log.error('Quarantined', message_id, error_msg)
+            error_msg = self.quarantine_message(message)
+            log.error('Quarantined %s %s', message_id, error_msg)
             return False
 
     def process_message(self, message, info, text, attachments):
@@ -263,3 +265,17 @@ class MailinRunner2(object):
 
         IMailinHandler(target).handle(message, info, text, attachments)
 
+    def bounce_message(self, message, error):
+        mailer = getUtility(IMailDelivery)
+        from_email = get_setting(self.root, 'postoffice.bounce_from_email')
+        if from_email is None:
+            from_email = get_setting(self.root, 'admin_email')
+        self.queue.bounce(message, mailer.send, from_email, error)
+
+    def quarantine_message(self, message):
+        mailer = getUtility(IMailDelivery)
+        from_email = get_setting(self.root, 'postoffice.bounce_from_email')
+        if from_email is None:
+            from_email = get_setting(self.root, 'admin_email')
+        self.queue.quarantine(message, sys.exc_info(), mailer.send, from_email)
+        return traceback.format_exc()
